B-1: channels added(Telegram + MAX + VK )
